--- a/ejercicio2-html-y-css/styles.css
+++ b/ejercicio2-html-y-css/styles.css
@@ -3,13 +3,16 @@
     max-width: 300px;
     padding: 20px;
     margin: 0 auto;
+    margin-top: 100px;
     background: linear-gradient(#bd09b7, #6b4cf5);
     border-radius: 20px;
-    box-shadow: 0 2px 5px rgb(247, 245, 245);
+    box-shadow: 0 2px 5px rgb(208, 246, 56);
   }
   
   form {
     color: white;
+    margin-bottom: 50px;
+
   }
   
   h1 {
@@ -29,7 +32,7 @@
     border: none;
     border-radius: 5px;
     margin-bottom: 10px;
-    color: white;
+    color: rgb(0, 0, 0);
   }
   
   button {
